my_AI/OpenWebUI-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  labels:
    app: my-AI
spec:
  ports:
    - port: 8080
  selector:
    app: my-AI
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-deployment
  labels:
    app: my-AI
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-AI
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-AI
        tier: backend
    spec:
      containers:
        - image: ghcr.io/open-webui/open-webui:main
          name: open-webui
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: open-webui-persistent-storage
              mountPath: /app/backend/data
          resources:
            limits:
              cpu: "2"
              memory: 8Gi
            requests:
              cpu: "1"
              memory: 6Gi
      volumes:
        - name: open-webui-persistent-storage
          persistentVolumeClaim:
            claimName: open-webui-pv-claim
