my_AI/mcp-searxng-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcp-searxng-service
  labels:
    app: my-MCP-SearXNG
spec:
  ports:
    - port: 48888
      targetPort: 8080
  selector:
    app: my-MCP-SearXNG
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp-searxng-deployment
  labels:
    app: my-MCP-SearXNG
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-MCP-SearXNG
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-MCP-SearXNG
        tier: backend
    spec:
      containers:
        - image: isokoliuk/mcp-searxng:latest
          name: mcp-searxng
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "125m"
              memory: 256Mi
            requests:
              cpu: "125m"
              memory: 256Mi
##########################################################################################
# http://mcp-searxng-service:48888/mcp
#
