my_AI/ollama-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  labels:
    app: my-AI-ollama
spec:
  ports:
    - port: 11434
      targetPort: 11434
  selector:
    app: my-AI-ollama
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama-deployment
  labels:
    app: my-AI
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-AI-ollama
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-AI-ollama
        tier: backend
    spec:
      containers:
        - image: ollama/ollama:latest #ollama/ollama:rocm
          name: ollama
          ports:
            - containerPort: 11434
          volumeMounts:
            - name: ollama-persistent-storage
              mountPath: /root/.ollama
          resources:
            limits:
              cpu: "11" #"14"
              memory: 36Gi
              amd.com/gpu: "1"  # device-pluginが提供するリソース名を指定
            requests:
              cpu: "11" #"12"
              memory: 36Gi #16Gi
              amd.com/gpu: "1"  # device-pluginが提供するリソース名を指定
      volumes:
        - name: ollama-persistent-storage
          persistentVolumeClaim:
            claimName: ollama-pv-claim
