my_AI/searxng-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-service
  labels:
    app: my-SearXNG
spec:
  ports:
    - port: 8888
      targetPort: 8080
  selector:
    app: my-SearXNG
    tier: backend
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: searxng-deployment
  labels:
    app: my-SearXNG
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-SearXNG
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: my-SearXNG
        tier: backend
    spec:
      containers:
        - image: searxng/searxng:latest
          name: searxng
          lifecycle:
            postStart:
              exec:
                command:
                  - "/bin/ash"
                  - "-c"
                  - >
                    ash /usr/local/searxng/searxng-setting-script.sh
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: searxng-setting-script
              mountPath: /usr/local/searxng/searxng-setting-script.sh
              subPath: searxng-setting-script.sh
          resources:
            limits:
              cpu: "125m"
              memory: 512Mi
            requests:
              cpu: "125m"
              memory: 512Mi
      volumes:
        - name: searxng-setting-script # volumeMountsで/etc/nginxにmountするやつ
          configMap:
            name: searxng-setup-script # ConfigMapのnginx-confを/etc/nginx以下に配置する
##########################################################################################
# 設定変更

# kubectl exec --tty --stdin searxng-deployment-(番号) -- /bin/ash
# cp /etc/searxng/settings.yml /etc/searxng/settings_default.yml
# sed -i s/"- html"/"- html\n    - json\n"/g /etc/searxng/settings.yml
# sed -i s/"request_timeout: 3.0"/"request_timeout: 10.0"/g /etc/searxng/settings.yml

# 再起動
# kubectl rollout restart deployment searxng-deployment

# 確認
# https://search.oahs.f5.si/search?lang=ja&q=ちびまる子ちゃん&format=json
