my_AI/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
    #
    cert-manager.io/cluster-issuer: "my-cluster-issuer"
    #
    traefik.ingress.kubernetes.io/service.serverstransport: default-ai-traefik-config@kubernetescrd
    # nginx.ingress.kubernetes.io/proxy-body-size: "1G"
    # nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
    # traefik.ingress.kubernetes.io/service.timeout: "3600s"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    # nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: public
  tls:
    - hosts:
        # ドメイン記載
        - ai.oahs.f5.si
        - ollama.oahs.f5.si
        - search.oahs.f5.si
      secretName: my-cluster-issuer-secret # cert-managerはこのシークレットに作成した証明書を格納する
  rules:
    - host: ai.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui-service
                port:
                  number: 8080
    - host: ollama.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-service
                port:
                  number: 11434
    - host: search.oahs.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: searxng-service
                port:
                  number: 8888
